--- a/Python-KB/base/dict.ipynb
+++ b/Python-KB/base/dict.ipynb
@@ -25,34 +25,51 @@
   {
    "source": [
     "D = {'eggs': 3, 'ham': 1, 'span': 2}\n",
-    "print(D)\n",
     "\n",
     "# 原处修改字典\n",
     "D['ham'] = ['grill', 'bake', 'fry']\n",
+    "print('原处修改字典')\n",
+    "print(D)\n",
     "\n",
-    "D"
+    "# 删除字典的元素\n",
+    "del D['eggs']\n",
+    "print('\\n' + '删除字典的元素')\n",
+    "print(D)"
    ],
    "cell_type": "code",
    "metadata": {},
-   "execution_count": 9,
+   "execution_count": 15,
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "{'eggs': 3, 'ham': 1, 'span': 2}\n"
+      "原处修改字典\n{'eggs': 3, 'ham': ['grill', 'bake', 'fry'], 'span': 2}\n\n删除字典的元素\n{'ham': ['grill', 'bake', 'fry'], 'span': 2}\n"
      ]
-    },
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "{'eggs': 3, 'ham': ['grill', 'bake', 'fry'], 'span': 2}"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 9
     }
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "返回所有value\n[3, 1, 2]\n\nitems方法，返回字典的值列表和 key value 元组\n[('eggs', 3), ('ham', 1), ('span', 2)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "D = {'eggs': 3, 'ham': 1, 'span': 2}\n",
+    "\n",
+    "print('返回所有value')\n",
+    "print(list(D.values()))\n",
+    "\n",
+    "print('\\n' + 'items方法，返回字典的值列表和 key value 元组')\n",
+    "print(list(D.items()))"
    ]
   },
   {
