--- a/Python-KB/base/dict.ipynb
+++ b/Python-KB/base/dict.ipynb
@@ -291,12 +291,335 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "{'a': 1, 'b': 2, 'c': 3}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 字典解析\n",
+    "D = {k: v for (k, v) in zip(['a', 'b', 'c'], [1, 2, 3])}\n",
+    "print(D)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "{1: 1, 2: 4, 3: 9, 4: 16}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 字典解析\n",
+    "D = {x: x ** 2 for x in [1, 2, 3, 4]}\n",
+    "print(D)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "{'S': 'SSSS', 'P': 'PPPP', 'A': 'AAAA', 'M': 'MMMM'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 字典解析\n",
+    "D = {c: c * 4 for c in 'SPAM'}\n",
+    "print(D)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "{'spam': 'SPAM!', 'eggs': 'EGGS!', 'ham': 'HAM!'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 字典解析\n",
+    "D = {c.lower(): c + '!' for c in ['SPAM', 'EGGS', 'HAM']}\n",
+    "print(D)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "{'a': 0, 'b': 0, 'c': 0}"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 50
+    }
+   ],
+   "source": [
+    "# fromkeys()\n",
+    "D = dict.fromkeys(['a', 'b', 'c'], 0)\n",
+    "D"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "{'a': 0, 'b': 0, 'c': 0}"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 51
+    }
+   ],
+   "source": [
+    "# fromkeys()\n",
+    "D = {k:0 for k in ['a', 'b', 'c']}\n",
+    "D"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "{'s': None, 'p': None, 'a': None, 'm': None}"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 52
+    }
+   ],
+   "source": [
+    "# fromkeys()\n",
+    "D = dict.fromkeys('spam')\n",
+    "D"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "{'s': None, 'p': None, 'a': None, 'm': None}"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 53
+    }
+   ],
+   "source": [
+    "# fromkeys()\n",
+    "D = {k: None for k in 'spam'}\n",
+    "D"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "\nlist(K):\n\n运行后结果如下\n['a', 'b', 'c']\n[1, 2, 3]\n\ndelete 后结果如下\n['a', 'c']\n[1, 3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 字典视图\n",
+    "D = dict(a=1, b=2, c=3)\n",
+    "\n",
+    "K = D.keys()\n",
+    "V = D.values()\n",
+    "\n",
+    "print('\\n' + 'list(K):')\n",
+    "print('\\n' + '运行后结果如下')\n",
+    "print(list(K))\n",
+    "print(list(V))\n",
+    "\n",
+    "print('\\n' + 'delete 后结果如下')\n",
+    "del D['b']\n",
+    "print(list(K))\n",
+    "print(list(V))\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "\n|:\n{'b', 'a', 'x', 'c'}\n\n&:\n"
+     ]
+    },
+    {
+     "output_type": "error",
+     "ename": "TypeError",
+     "evalue": "unsupported operand type(s) for &: 'dict_values' and 'dict'",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-79-f0661bc341f8>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'\\n'\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m'&:'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 11\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mV\u001b[0m \u001b[0;34m&\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0;34m'x'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;36m4\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     12\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'\\n'\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m'&values'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: unsupported operand type(s) for &: 'dict_values' and 'dict'"
+     ]
+    }
+   ],
+   "source": [
+    "# 字典视图与几何\n",
+    "D = dict(a=1, b=2, c=3)\n",
+    "\n",
+    "K = D.keys()\n",
+    "V = D.values()\n",
+    "\n",
+    "print('\\n' + '|:')\n",
+    "print(K | {'x': 4})\n",
+    "\n",
+    "print('\\n' + '&:')\n",
+    "print(V & {'x': 4})\n",
+    "\n",
+    "print('\\n' + '&values')\n",
+    "print(V & {'x': 4}.values())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "{'b', 'a', 'c'}\n{'b'}\n{'b', 'c'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 字典视图与集合\n",
+    "D = dict(a=1, b=2, c=3)\n",
+    "\n",
+    "print(D.keys() & D.keys())\n",
+    "\n",
+    "print(D.keys() & {'b'})\n",
+    "\n",
+    "print(D.keys() & {'b', 'c', 'd'})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[('a', 1)]\n{'a', ('a', 1)}\n{'a', ('a', 1)}\n{('d', 4), ('c', 3), ('a', 1)}\nset()\n"
+     ]
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "{'d': 4, 'c': 3, 'a': 1}"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 89
+    }
+   ],
+   "source": [
+    "# 字典视图与集合\n",
+    "D = {'a': 1}\n",
+    "print(list(D.items()))\n",
+    "\n",
+    "print(D.items() | D.keys())\n",
+    "\n",
+    "print(D.items() | D)\n",
+    "\n",
+    "print(D.items() | {('c', 3), ('d', 4)})\n",
+    "\n",
+    "print(D.items() & {('c', 3), ('d', 4)})\n",
+    "\n",
+    "print(dict(D.items() | {('c', 3), ('d', 4)}))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "a 1\nc 3\nd 2\na 1\nc 3\nd 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 排序字典键\n",
+    "D = {'a': 1, 'd': 2, 'c': 3}\n",
+    "ks = D.keys()\n",
+    "\n",
+    "for k in sorted(ks):\n",
+    "    print(k, D[k])\n",
+    "\n",
+    "for k in sorted(D):\n",
+    "    print(k, D[k])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# 字典解析\n"
-   ]
+   "source": []
   }
  ]
 }
